updated to valueof instead of new datatype per sonatype suggestions